Fix overflow bug

--- a/src/pages/Create.module.css
+++ b/src/pages/Create.module.css
@@ -15,7 +15,7 @@
   background: rgba(5, 11, 14, 0.8);
   color: aliceblue;
   overflow-y: scroll;
-  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 .classContainer .class,
